Merged PR 60: resolved build warnings,
resolved build warnings,
refactored interfaces to another package to prevent split packages.